--- a/index.html
+++ b/index.html
@@ -5,30 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css"> 
   <title>Frontend Mentor | Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <div class="box">
+      <img src="./assets/images/illustration-article.svg" alt="img">
+      <div class="learning">Learning</div>
+      <p>Published 21 Dec 2023</p>
+      <h3>HTML & CSS foundations</h1>
+      <h6>These languages are the backbone of every
+         website, defining structure, content, and 
+         presentation.</h6>
+      <div class="user">
+        <img src="./assets/images/image-avatar.webp" alt="user">
+        <h3>Greg Hooper</h3>
+      </div>
+    </div>
 </body>
 </html>
