--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <title>Blog preview card</title>
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css"> 
@@ -12,7 +13,7 @@
 <body>
     <div class="box">
       <img src="./assets/images/illustration-article.svg" alt="img">
-      <div class="learning">Learning</div>
+      <button class="learning">Learning</button>
       <p>Published 21 Dec 2023</p>
       <h3>HTML & CSS foundations</h1>
       <h6>These languages are the backbone of every
